<resources>
    <string name="ttpsdk_text_splash_screen_loader">Loading</string>
    <string name="ttpsdk_text_options_title">Choose a payment method</string>
    <string name="ttpsdk_text_options_card">Debit or credit card</string>
    <string name="ttpsdk_text_options_installments">Pay monthly interest-free</string>
    <string name="ttpsdk_text_options_save_card">Save card</string>
    <string name="ttpsdk_text_options_save_card_popup_1">Safely store your card information for future purchases, so you don’t have to enter it again.</string>
    <string name="ttpsdk_text_options_save_card_popup_2">By making a payment, you agree to have your card number and expiration date stored. For your convenience, we will automatically process subsequent charges. Your card information will be encrypted for safety.</string>
    <string name="ttpsdk_text_options_email_checkbox">Send payment confirmation by e-mail</string>
    <string name="ttpsdk_text_options_email_title">E-mail</string>
    <string name="ttpsdk_text_options_email_error">Incorrect e-mail</string>
    <string name="ttpsdk_text_options_email_require">To complete the payment please provide E-mail</string>
    <string name="ttpsdk_text_options_card_be_saved">Your сard information will be saved for this subscription</string>
    <string name="ttpsdk_text_cash_min_hint">Cash payments available for orders higher over</string>
    <string name="ttpsdk_text_card_title">Pay by card</string>
    <string name="ttpsdk_text_card_hint_number">Card number</string>
    <string name="ttpsdk_text_card_hint_exp">MM / YY</string>
    <string name="ttpsdk_text_card_hint_cvv">CVV</string>
    <string name="ttpsdk_text_card_3ds_info">You will be redirected to your bank\'s 3DS confirmation page. Please keep your phone nearby</string>
    <string name="ttpsdk_text_card_3ds_info_popup">3DS is a technology that guarantees the security of your payment. You may have to enter a code that you will receive from your bank via SMS or approve the transaction directly on your bank\'s mobile app</string>
    <string name="ttpsdk_text_card_pay_button">Pay %s</string>
    <string name="ttpsdk_text_installments_title"></string>
    <string name="ttpsdk_text_installments_error">This card is not eligible for the interest-free monthly payment option</string>
    <string name="ttpsdk_text_installments_pay_button">Pay monthly interest-free</string>
    <string name="ttpsdk_text_installments_list_title">Select the number of interest-free months</string>
    <string name="ttpsdk_text_installments_list_not_selected">Interest-free months</string>
    <string name="ttpsdk_text_installments_pay_in_full_now">Pay in full now</string>
    <string name="ttpsdk_text_installments_interest_free_months">interest-free months</string>
    <string name="ttpsdk_text_cash_name">Name</string>
    <string name="ttpsdk_text_cash_save_barcode">Save the barcode! It will open in a separate tab.</string>
    <string name="ttpsdk_text_cash_pay_with">Pay with</string>
    <string name="ttpsdk_text_cash_10_stores">+10 Stores</string>
    <string name="ttpsdk_text_cash_convenience_store">Convenience Store</string>
    <string name="ttpsdk_text_cash_store_not_available">Not available now, please use another method</string>
    <string name="ttpsdk_text_spei_purchase_pending_payment">Purchase pending payment</string>
    <string name="ttpsdk_text_spei_open_your_online_bank">Open your online bank\nand make a SPEI payment</string>
    <string name="ttpsdk_text_spei_using_the_following_details">using the following details:</string>
    <string name="ttpsdk_text_spei_clabe">CLABE</string>
    <string name="ttpsdk_text_spei_bank">Bank</string>
    <string name="ttpsdk_text_spei_amount">Amount</string>
    <string name="ttpsdk_text_spei_payment_concept">Payment concept</string>
    <string name="ttpsdk_text_spei_pay_before">Pay before</string>
    <string name="ttpsdk_text_spei_payment_details_send_to">Payment details and confirmation will be sent to:</string>
    <string name="ttpsdk_text_spei_send_to_another_email">Send to another email</string>
    <string name="ttpsdk_text_spei_make_spei_via_your_bank">Make a SPEI payment via your bank. This page can be closed. If you could not pay via SPEI, choose another payment method</string>
    <string name="ttpsdk_text_spei_other_method">Other method</string>
    <string name="ttpsdk_text_spei_send_payment_details_by_email">Send payment details and confirmation by email</string>
    <string name="ttpsdk_text_spei_email_error">Error sending details to email</string>
    <string name="ttpsdk_text_spei_try_again">Try again</string>
    <string name="ttpsdk_text_process_title">Payment is being processed</string>
    <string name="ttpsdk_text_process_title_success">Payment completed</string>
    <string name="ttpsdk_text_process_button_success">Return to the store</string>
    <string name="ttpsdk_text_process_title_error">Please, try again</string>
    <string name="ttpsdk_text_process_button_error">Try again</string>
    <string name="ttpsdk_text_process_button_ok">OK</string>
    <string name="ttpsdk_text_process_title_tinkoff_pay"></string>
    <string name="ttpsdk_text_process_description_tinkoff_pay"></string>
    <string name="ttpsdk_text_sbp_title"></string>
    <string name="ttpsdk_text_sbp_no_banks_apps"></string>
    <string name="ttpsdk_text_process_button_tinkoff_pay_sbp"></string>
    <string name="ttpsdk_currency_template">%.2f\u20BD</string>
    <string name="ttpsdk_error_connection">Connection lost</string>
    <string name="ttpsdk_error_connection_extra">Please, check your Internet connection</string>
    <string name="ttpsdk_error_3001">Please, try again</string>
    <string name="ttpsdk_error_3002">Please, try again</string>
    <string name="ttpsdk_error_3003">Please, try again</string>
    <string name="ttpsdk_error_3004">Please, try again</string>
    <string name="ttpsdk_error_3005">Please, try again</string>
    <string name="ttpsdk_error_3006">Please, try again</string>
    <string name="ttpsdk_error_3007">Please, try again</string>
    <string name="ttpsdk_error_3008">Please, try again</string>
    <string name="ttpsdk_error_5001">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5003">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5004">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5005">Please, try again</string>
    <string name="ttpsdk_error_5006">Make sure the card details you entered are correct or try with another card</string>
    <string name="ttpsdk_error_5007">Please, try again</string>
    <string name="ttpsdk_error_5012">The card is not for online payments</string>
    <string name="ttpsdk_error_5013">Incorrect payment amount</string>
    <string name="ttpsdk_error_5014">Make sure the card details you entered are correct or try with another card</string>
    <string name="ttpsdk_error_5015">Make sure the card details you entered are correct or try with another card</string>
    <string name="ttpsdk_error_5019">Please, try again</string>
    <string name="ttpsdk_error_5030">Please, try again</string>
    <string name="ttpsdk_error_5031">Please, try again</string>
    <string name="ttpsdk_error_5034">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5036">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5041">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5043">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5051">Insufficient funds on the card</string>
    <string name="ttpsdk_error_5054">Card expired or invalid expiration date</string>
    <string name="ttpsdk_error_5057">Please, try again</string>
    <string name="ttpsdk_error_5059">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5061">Card limit exceeded. Please, increase the limit or try another card</string>
    <string name="ttpsdk_error_5062">Please, try another card or payment method</string>
    <string name="ttpsdk_error_5063"></string>
    <string name="ttpsdk_error_5065">Exceeded transaction limit on the card. Please, increase the limit or try another card</string>
    <string name="ttpsdk_error_5082">Incorrect CVV code</string>
    <string name="ttpsdk_error_5091">Please, try again</string>
    <string name="ttpsdk_error_5092">Please, try again</string>
    <string name="ttpsdk_error_5096">Please, try again</string>
    <string name="ttpsdk_error_5204">Please, try again</string>
    <string name="ttpsdk_error_5206">3-D Secure authorization failed</string>
    <string name="ttpsdk_error_5207">3-D Secure authorization is not available. Please, try again</string>
    <string name="ttpsdk_error_5300">Please, try again</string>
    <string name="ttpsdk_error_3001_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3002_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3003_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3004_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3005_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3006_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3007_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_3008_extra">If the error persists, please contact the page administrator</string>
    <string name="ttpsdk_error_5001_extra"></string>
    <string name="ttpsdk_error_5003_extra"></string>
    <string name="ttpsdk_error_5004_extra"></string>
    <string name="ttpsdk_error_5005_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5006_extra"></string>
    <string name="ttpsdk_error_5007_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5012_extra">Please activate electronic payments in your bank app or try with another card or payment method</string>
    <string name="ttpsdk_error_5013_extra">Check the amount</string>
    <string name="ttpsdk_error_5014_extra"></string>
    <string name="ttpsdk_error_5015_extra"></string>
    <string name="ttpsdk_error_5019_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5030_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5031_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5034_extra"></string>
    <string name="ttpsdk_error_5036_extra"></string>
    <string name="ttpsdk_error_5041_extra"></string>
    <string name="ttpsdk_error_5043_extra"></string>
    <string name="ttpsdk_error_5051_extra"></string>
    <string name="ttpsdk_error_5054_extra">Make sure the card details you entered are correct or try with another card</string>
    <string name="ttpsdk_error_5057_extra">If the error continues, please try with another card or another payment method</string>
    <string name="ttpsdk_error_5059_extra"></string>
    <string name="ttpsdk_error_5061_extra"></string>
    <string name="ttpsdk_error_5062_extra"></string>
    <string name="ttpsdk_error_5063_extra"></string>
    <string name="ttpsdk_error_5065_extra"></string>
    <string name="ttpsdk_error_5082_extra"></string>
    <string name="ttpsdk_error_5091_extra">If the error continues, please try with another card or another payment method</string>
</resources>