<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/button_cs"
            style="@style/ttpsdk_ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/ttpsdk_bg_rounded_cash_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:letterSpacing="0.01"
                android:textSize="16sp"
                android:textColor="#222D41"
                android:text="@string/ttpsdk_text_cash_convenience_store"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/ttpsdk_cash_7eleven_logo"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/ttpsdk_cash_wallmart_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:letterSpacing="0.01"
                android:textSize="12sp"
                android:text="@string/ttpsdk_text_cash_10_stores"/>
        </LinearLayout>

        <View
            android:id="@+id/view_block_cs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/ttpsdk_BlockButtonView"
            app:layout_constraintBottom_toBottomOf="@id/button_cs"
            app:layout_constraintEnd_toEndOf="@id/button_cs"
            app:layout_constraintStart_toStartOf="@id/button_cs"
            app:layout_constraintTop_toTopOf="@id/button_cs"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_disable_cs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="11sp"
        android:text="@string/ttpsdk_text_cash_store_not_available"
        android:gravity="center"
        android:visibility="gone"/>
</LinearLayout>