<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/image_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ttpsdk_drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        style="@style/ttpsdk_TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_drag_handle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card_number"
        style="@style/ttpsdk_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_card_number"
            style="@style/ttpsdk_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:digits="0123456789 "
            android:hint="@string/ttpsdk_text_card_hint_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@id/edit_card_exp"
            tools:text="4242 4242 4242 4242" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_ps"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/til_card_number"
        app:layout_constraintEnd_toEndOf="@id/til_card_number"
        app:layout_constraintTop_toTopOf="@id/til_card_number" />

    <ImageButton
        android:id="@+id/btn_scan"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ttpsdk_ic_scan"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/til_card_number"
        app:layout_constraintEnd_toEndOf="@id/til_card_number"
        app:layout_constraintTop_toTopOf="@id/til_card_number" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card_exp"
        style="@style/ttpsdk_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/til_card_cvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_card_exp"
            style="@style/ttpsdk_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789/"
            android:hint="@string/ttpsdk_text_card_hint_exp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@id/edit_card_cvv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card_cvv"
        style="@style/ttpsdk_TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_card_exp"
        app:layout_constraintTop_toBottomOf="@id/til_card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_card_cvv"
            style="@style/ttpsdk_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/ttpsdk_text_card_hint_cvv"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="4"
            tools:text="111" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_not_instalments"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/ttpsdk_bg_rounded_pink"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_card_exp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ttpsdk_ic_error"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="5sp"
            android:textColor="#EB5757"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/ttpsdk_text_installments_error"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_installments_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/ttpsdk_text_installments_list_title"
        android:textColor="#8c949f"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_not_instalments" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_installments"
        style="@style/ttpsdk_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_installments_list_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_installments"
            style="@style/ttpsdk_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/ttpsdk_text_installments_list_not_selected"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/button_3ds_info_popup"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ttpsdk_ic_question"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/til_installments"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_3ds_info"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/ttpsdk_text_card_3ds_info"
        android:textColor="#8c949f"
        android:textSize="13sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_3ds_info_popup"
        app:layout_constraintTop_toBottomOf="@id/til_installments" />

    <Button
        android:id="@+id/button_pay"
        style="@style/ttpsdk_ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ttpsdk_bg_rounded_installments_button"
        android:text="@string/ttpsdk_text_installments_pay_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_3ds_info" />

    <View
        android:id="@+id/view_block_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/ttpsdk_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:visibility="visible"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="@id/button_pay"
        app:layout_constraintEnd_toEndOf="@id/button_pay"
        app:layout_constraintStart_toStartOf="@id/button_pay"
        app:layout_constraintTop_toTopOf="@id/button_pay" />

    <ImageView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ttpsdk_margin_big"
        android:src="@drawable/ttpsdk_secured_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_pay" />
</androidx.constraintlayout.widget.ConstraintLayout>